# NotesDrive

./: CMakeLists.txt  NotesDrive.kdev4  main.cpp
authentication/: authentication.cpp  authentication.h  ecdh-authentication.cpp  ecdh-authentication.h  ecdsa-authentication.cpp  ecdsa-authentication.h  utils-authentication.cpp  utils-authentication.h
cmake/Modules/: FindCryptoPP.cmake
encryption/: aes-encryption.cpp  aes-encryption.h  rsa-encryption.cpp  rsa-encryption.cpp.old  rsa-encryption.h  utils-encryption.cpp  utils-encryption.h
networking/: networking.cpp  networking.cpp.old  networking.h  networking.h.old
ui/: notesdrive_app.cpp  notesdrive_app.h  notesdrive_connectdialog.cpp  notesdrive_connectdialog.h  notesdrive_mainframe.cpp  notesdrive_mainframe.h
